# testpage

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  main_dev.py  requirements.txt  ssh_prepare.sh  t.Dockerfile  test.db
backend/: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  backend_pre_start.py  main_dev.py  main_initital_data.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  ruff.toml  test.json
backend/app/: logging.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/crud/: schema.py  settings.py  user.py
backend/app/api/routes/: __init__.py  login.py  schema.py  user.py  utils.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/filestorage/: __init__.py  local_storage.py  protocol.py  s3_storage.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  metadata.py  mixins.py  security.py  user.py  user_group.py
backend/app/models/schema/: __init__.py  schema.py
backend/app/models/user/: __init__.py  user.py  user_group.py
backend/app/schema_manager/: mappings.py  schema_manager.py
backend/app/schema_manager/meta_schemas/: frictionlessv1.json  frictionlessv1.yaml  frictionlessv1_org.json  sweet_metastandard.yaml
backend/app/webui/: main.py  settings.py
backend/app/webui/routes/: __init__.py  schemas.py  users.py
backend/app/webui/templates/: base.html  login.html  schema.html  (+1 more)
backend/data/schemas/: classification_end_use_demand.yaml  classification_location.yaml  example_end_use.yaml  gdp.yaml  generation.yaml
backend/scripts/: create_requirements.sh  prestart.sh
backend/tests/: conftest.py  test_dependencies.py  test_security.py  test_user.py  test_utils.py  utils.py
backend/tests/filestorage/: test_local_storage.py  test_s3_storage.py
backend/tests/schema/: settings.py  test_crud.py  test_metaschema.py  test_model_from_schema.py  test_routes.py
backend/tests/schema_manager/: test_crud.py  test_metaschema.py
backend/tests/test_files/: valid_generation.yaml
backend/tests/user/: test_crud.py  test_routes.py
(+22 files in other folders)
